// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: local user 1`] = `
<div
  className="account-body account-container"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="my_account.security"
  />
  <Tokens
    login="luke"
  />
  <section
    className="boxed-group"
  >
    <h2
      className="spacer-bottom"
    >
      my_profile.password.title
    </h2>
    <ResetPasswordForm
      className="boxed-group-inner"
      user={
        Object {
          "groups": Array [],
          "isLoggedIn": true,
          "local": true,
          "login": "luke",
          "name": "Skywalker",
          "scmAccounts": Array [],
        }
      }
    />
  </section>
</div>
`;

exports[`should render correctly: non-local user 1`] = `
<div
  className="account-body account-container"
>
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="my_account.security"
  />
  <Tokens
    login="luke"
  />
</div>
`;
